--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,142 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+a.active {
+  font-weight: 700;
+  background-color: rgb(243, 243, 243);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* width */
+::-webkit-scrollbar {
+  width: 1px;
+  height: 1px;
+}
+
+:hover::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(219, 219, 219);
+  margin: 5px;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #272727;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3b3b3b;
+}
+
+::-webkit-scrollbar-button:decrement:start,
+::-webkit-scrollbar-button:increment:end {
+  border-style: solid;
+  height: 16px;
+  width: 16px;
+}
+
+/* Up */
+::-webkit-scrollbar-button:vertical:decrement:start {
+  border-width: 0 5px 10px 5px;
+  border-color: transparent transparent #272727 transparent;
+}
+
+::-webkit-scrollbar-button:vertical:decrement:start:hover {
+  border-color: transparent transparent #3b3b3b transparent;
+}
+
+/* Down */
+::-webkit-scrollbar-button:vertical:increment:end {
+  border-width: 10px 5px 0 5px;
+  border-color: #272727 transparent transparent transparent;
+}
+
+::-webkit-scrollbar-button:vertical:increment:end:hover {
+  border-color: #3b3b3b transparent transparent transparent;
+}
+
+/* Left */
+::-webkit-scrollbar-button:horizontal:decrement:start {
+  border-width: 5px 10px 5px 0;
+  border-color: transparent #272727 transparent transparent;
+}
+
+::-webkit-scrollbar-button:horizontal:decrement:start:hover {
+  border-color: transparent #3b3b3b transparent transparent;
+}
+
+/* Right */
+::-webkit-scrollbar-button:horizontal:increment:end {
+  border-width: 5px 0 5px 10px;
+  border-color: transparent transparent transparent #272727;
+}
+
+::-webkit-scrollbar-button:horizontal:increment:end:hover {
+  border-color: transparent transparent transparent #3b3b3b;
+}
+
+@media (prefers-color-scheme: dark) {
+  a.active {
+    font-weight: 700;
+    background-color: rgb(61, 61, 61);
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #272727;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  /* Up */
+  ::-webkit-scrollbar-button:vertical:decrement:start {
+    border-color: transparent transparent #888 transparent;
+  }
+
+  ::-webkit-scrollbar-button:vertical:decrement:start:hover {
+    border-color: transparent transparent #555 transparent;
+  }
+
+  /* Down */
+  ::-webkit-scrollbar-button:vertical:increment:end {
+    border-color: #888 transparent transparent transparent;
+  }
+
+  ::-webkit-scrollbar-button:vertical:increment:end:hover {
+    border-color: #555 transparent transparent transparent;
+  }
+
+  /* Left */
+  ::-webkit-scrollbar-button:horizontal:decrement:start {
+    border-color: transparent #888 transparent transparent;
+  }
+
+  ::-webkit-scrollbar-button:horizontal:decrement:start:hover {
+    border-color: transparent #555 transparent transparent;
+  }
+
+  /* Right */
+  ::-webkit-scrollbar-button:horizontal:increment:end {
+    border-color: transparent transparent transparent #888;
+  }
+
+  ::-webkit-scrollbar-button:horizontal:increment:end:hover {
+    border-color: transparent transparent transparent #555;
+  }
 }
